# fastAPI

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 167e593e068b_create_tables.py
workout_api/: __init__.py  main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: database.py  settings.py
workout_api/contrib/: models.py  schemas.py
workout_api/contrib/repository/: dependencies.py
